--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-firebase/app": "^18.3.0",
     "@react-native-firebase/auth": "^18.3.0",
     "@react-native-firebase/database": "^18.3.0",
+    "@react-native-picker/picker": "^2.5.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
@@ -30,6 +31,7 @@
     "react-native-camera": "^4.2.1",
     "react-native-device-info": "^10.8.0",
     "react-native-document-picker": "^9.0.1",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-marquee-view": "^1.0.5",
@@ -41,6 +43,7 @@
     "react-native-screens": "^3.22.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^13.10.0",
+    "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "^13.3.0",
     "react-navigation": "^4.4.4",
