--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.4.0",
+    "deprecated-react-native-prop-types": "^4.2.1",
     "express": "^4.18.2",
     "formik": "^2.4.3",
     "hbs": "^4.2.0",
